--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,9 @@
 RewriteEngine On
 
+RewriteCond %{HTTPS} !=on
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-l
-
 RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
